fix margin at the top for h1 and h2 to eliminate extra space in between when flash messages and errors

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -21,7 +21,6 @@
 
   .navigation {
     background: rgba(255, 255, 255, 0.589);
-    
     font-size: 14px;
     margin: 16px auto;
     max-width: 1000px;
@@ -43,13 +42,15 @@
   h1 {
     font-size: 36px;
     line-height: 20px;
+    margin-top: 1px;
   }
 
   h2 {
     border-bottom: 5px outset white;
     font-size: 24px;
     line-height: 36px;
-    margin-bottom: 24px;
+    margin-bottom: 1px;
+    margin-top: 1px;
   }
 
   h3 {
